<resources>
    <string name="app_name">The Weather Oracle</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="notifications">Notifications</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="follow_system">Follow System</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="weather_icon">Weather icon</string>
    <string name="use_gps">Use GPS</string>
    <string name="select_on_map">Select on Map</string>
    <string name="city">City</string>
    <string name="clouds">Clouds</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="rain">Rain</string>
    <string name="_5_day_forecast">5-day Forecast</string>
    <string name="wind">Wind</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="alerts">Alerts</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="data_shown_for_n_a">Data Shown for: N/A</string>
    <string name="unknown">Unknown</string>
    <string name="confirm_language_change">Confirm Language Change</string>
    <string name="changing_the_language_will_restart_the_app_proceed">Changing the language will restart the app. Proceed?</string>
    <string name="yes">Yes</string>

    <string name="data_shown_for_na">Last updated: %s</string>
    <string name="last_updated_na">Last updated: N/A</string>
    <string name="location_permission_denied">Location permissions are required to use GPS. Would you like to grant permissions or switch to map selection?</string>
    <string name="location_services_disabled">Location services are disabled. Please enable them or switch to map selection.</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="use_map">Use Map</string>
    <string name="enable_location">Enable Location</string>
    <string name="select_location">Select Location</string>

    <string name="confirm_delete_city">Are you sure you want to remove %s from your favorites?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="city_added">Added %s to favorites</string>
    <string name="no">No</string>


</resources>