<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.theweatheroracle.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.example.theweatheroracle.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->
    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.theweatheroracle.fav.FavFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_fav" />

    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.example.theweatheroracle.alerts.AlertsFragment"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_alerts" />


    <!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="com.example.theweatheroracle.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->
</navigation>